# stm32

./: .mxproject  CMakeCache.txt  CMakeLists.txt  Cargo.toml  build.ninja  cmake_install.cmake  compile_commands.json  openocd.gdb  stm32.ioc
.cargo/: config.toml
Core/Src/: main.c  stm32f3xx_hal_msp.c
Drivers/BSP/STM32F3-Discovery/: stm32f3_discovery.c  stm32f3_discovery.h
F3/: .gitignore  .mxproject  CMakeLists.txt  F3.ioc  Makefile
F3/Core/Src/: main.c
F3/cmake/stm32cubemx/: CMakeLists.txt
cmake/: gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt  cmake_install.cmake
src/: lib.rs  main.rs
