[package]
name = "stm32"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.6.4"
cortex-m-rt = "0.6.13"
stm32f3-discovery = "0.5.0"
cortex-m-semihosting = "0.5.0"
panic-halt = "0.2.0"

[dependencies.f3]
features = ["rt"]
version = "0.6.1"

# this lets you use `cargo fix`!
[[bin]]
name = "stm32"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
